<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_sight"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/sightseeing" />
        <item
            android:id="@+id/nav_pics"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/picture_gallery" />
        <item
            android:id="@+id/nav_vids"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/video_gallery" />
        <item
            android:id="@+id/nav_restaurants"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/restaurants" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/dfb_history" />

    </group>

    <item android:title="Share DFB">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />

        </menu>
    </item>

</menu>
